# ftc-pl

./: CMakeLists.txt  readme.md
src/: Vendor.hpp
src/primal/runtime/: RuntimeEngine.cpp  RuntimeEngine.hpp
src/primal/runtime/reconstructor/: Reconstructor.hpp
src/primal/runtime/reconstructor/reconstructors/: IATReconstructor.cpp
src/primal/segment/: SegmentTranslator.hpp
src/primal/segment/internal/: SegmentProvider.hpp
src/primal/util/: CommonUtil.cpp  CommonUtil.hpp  PanicUtil.hpp
src/primal/util/stuff/: RuntimeDefinitions.hpp
src/segment/data/: FataSegment.cpp  FataSegment.hpp
src/segment/data/sections/: IAT.cpp  Reloc.cpp  SectionAccessor.hpp
src/segment/internal/: SegmentInterpreter.hpp
src/segment/internal/framework/: FataEngine.cpp  FataEngine.hpp
src/segment/loader/bootstrap/: Bootstrap.cpp  BootstrapTaskController.cpp  BootstrapTaskController.hpp
